2010-04-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10629: class and title parameters of typolinks get broken

2010-04-11  Francois Suter  <francois@typo3.org>

	* Fixed bug #14005: Moving a page with IRRE records misplaces IRRE records

2010-04-11  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #10327: [felogin] redirecting to referer does not work
	* Fixed bug #13985: bugfix/code cleanup: wrong image dimension returned if alternative logo is set and skin-extension is installed in global-space (backend-redesign) (thanks to Stephan N Kellermayr)

2010-04-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14060: htmlArea RTE: Some table operations configuration may cause js error

2010-04-09  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.3.3
	* Fixed bug #13959: Core autoloader should accept class names only (could lead to remote command execution). Thanks to Helmut Hummel and Marcus Krause for providing a fix.

2010-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.8.9

2010-04-08  Oliver Hader  <oliver@typo3.org>

	* Cleanup #13869: Scheduler: editTasks() calls all registered tasks to edit just one (thanks to Francois Suter)

2010-04-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13828: Login cause JS error if not in frame (access to parent is not allowed)

2010-04-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13977: Improve OpenID association handling

2010-04-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14004: htmlArea RTE: Applying color or font repeatedly produces nested span elements

2010-04-05  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14003: "Check for extension updates" does not always find latest version

2010-04-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13487: No alternative icon returned from 'getIcon' (thanks to Stephan Kellermayr)
	* Fixed bug #13486: Wrong icon-state returned from 'getIcon' (thanks to Stephan Kellermayr)
