@@ -1,3 +1,7 @@
+2010-04-12  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #13674: htmlArea RTE: Incorrect position of cursor after SHIFT-ENTER in WebKit browser
+
 2010-04-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #10629: class and title parameters of typolinks get broken
